# ft_printf

./: CMakeLists.txt  Makefile  a.out  author  file.txt  main.c
include/: ft_printf.h
includes/: ft_printf.h
srcs/: ft_printf.c  itoa_double.c  macro.c  other_function.c  parse_format.c  parse_specifier.c  print_binary.c  print_char_str.c  print_double.c  print_hex_oct.c  print_int.c  print_utf.c
srcs/ft_printf/: a.out  ft_printf.c  ft_printf.h  ft_putbyte.c  libft.h  other_function.c  parse_format.c  parse_specifier.c  print_char_str.c  print_double.c  print_hex_oct.c  print_int.c  print_percent.c  print_signed_int2.c  print_utf.c
srcs/libft/: Makefile  ft_atoi_base.c  ft_countptr.c  ft_cpyptrn.c  ft_lstdel.c  ft_memalloc.c  ft_pow.c  ft_putsstr.c  ft_sqrt.c  ft_strchr.c  ft_strchrs.c  ft_strdup.c  ft_strsplitc.c  ft_strsubchr.c  ft_strtrims.c  get_next_line.c
srcs/libft/include/: libft.h
srcs/libft/includes/: libft.h
