cmake_minimum_required(VERSION 3.15)
project(ft_printfv2 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(pft/src)
include_directories(srcs/ft_printf)
include_directories(srcs/libft/include)

add_executable(ft_printfv2
    include/ft_printf.h
    include/libft.h
    pft/configurations/42fc/unit_tests.42fc.c
    pft/src/help.c
    pft/src/help.h
    pft/src/help_conf.c
    pft/src/history.c
    pft/src/main.c
    pft/src/options.c
    pft/src/print.c
    pft/src/show_disabled_postprocess.c
    pft/src/test.c
    pft/src/test.h
    pft/src/unit_tests_indexed.c
    pft/src/utils.c
    pft/unit_tests.c
    srcs/ft_printf/ft_printf.c
    srcs/ft_printf/ft_printf.h
    srcs/ft_printf/ft_putbyte.c
    srcs/ft_printf/libft.h
    srcs/ft_printf/other_function.c
    srcs/ft_printf/parse_format.c
    srcs/ft_printf/parse_specifier.c
    srcs/ft_printf/print_char_str.c
    srcs/ft_printf/print_double.c
    srcs/ft_printf/print_hex_oct.c
    srcs/ft_printf/print_int.c
    srcs/ft_printf/print_percent.c
    srcs/ft_printf/print_signed_int2.c
    srcs/ft_printf/print_utf.c
    srcs/libft/include/libft.h
    srcs/libft/ft_atoi.c
    srcs/libft/ft_atoi_base.c
    srcs/libft/ft_bzero.c
    srcs/libft/ft_countptr.c
    srcs/libft/ft_cpyptrn.c
    srcs/libft/ft_isalnum.c
    srcs/libft/ft_isalpha.c
    srcs/libft/ft_isascii.c
    srcs/libft/ft_isdigit.c
    srcs/libft/ft_isprint.c
    srcs/libft/ft_itoa.c
    srcs/libft/ft_lstadd.c
    srcs/libft/ft_lstdel.c
    srcs/libft/ft_lstdelone.c
    srcs/libft/ft_lstiter.c
    srcs/libft/ft_lstmap.c
    srcs/libft/ft_lstnew.c
    srcs/libft/ft_memalloc.c
    srcs/libft/ft_memccpy.c
    srcs/libft/ft_memchr.c
    srcs/libft/ft_memcmp.c
    srcs/libft/ft_memcpy.c
    srcs/libft/ft_memdel.c
    srcs/libft/ft_memmove.c
    srcs/libft/ft_memset.c
    srcs/libft/ft_pow.c
    srcs/libft/ft_putchar.c
    srcs/libft/ft_putchar_fd.c
    srcs/libft/ft_putendl.c
    srcs/libft/ft_putendl_fd.c
    srcs/libft/ft_putnbr.c
    srcs/libft/ft_putnbr_fd.c
    srcs/libft/ft_putsstr.c
    srcs/libft/ft_putstr.c
    srcs/libft/ft_putstr_fd.c
    srcs/libft/ft_sqrt.c
    srcs/libft/ft_strcat.c
    srcs/libft/ft_strchr.c
    srcs/libft/ft_strchrs.c
    srcs/libft/ft_strclr.c
    srcs/libft/ft_strcmp.c
    srcs/libft/ft_strcpy.c
    srcs/libft/ft_strdel.c
    srcs/libft/ft_strdup.c
    srcs/libft/ft_strequ.c
    srcs/libft/ft_striter.c
    srcs/libft/ft_striteri.c
    srcs/libft/ft_strjoin.c
    srcs/libft/ft_strlcat.c
    srcs/libft/ft_strlen.c
    srcs/libft/ft_strmap.c
    srcs/libft/ft_strmapi.c
    srcs/libft/ft_strncat.c
    srcs/libft/ft_strncmp.c
    srcs/libft/ft_strncpy.c
    srcs/libft/ft_strnequ.c
    srcs/libft/ft_strnew.c
    srcs/libft/ft_strnstr.c
    srcs/libft/ft_strrchr.c
    srcs/libft/ft_strsplit.c
    srcs/libft/ft_strsplitc.c
    srcs/libft/ft_strstr.c
    srcs/libft/ft_strsub.c
    srcs/libft/ft_strsubchr.c
    srcs/libft/ft_strtrim.c
    srcs/libft/ft_strtrims.c
    srcs/libft/ft_tolower.c
    srcs/libft/ft_toupper.c
    srcs/libft/get_next_line.c
    main.c)
